--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -488,6 +488,22 @@ img {
   .contact__container {
     justify-items: center;
   }
+ 
+  .contact__button {
+    margin: 0 auto;
+    background-color: #4f6ef7;
+    color: white;
+    font-weight: bold;
+    padding: 0.75rem 2rem;
+    border: none;
+    border-radius: 0.5rem;
+    cursor: pointer;
+    transition: 0.3s ease;
+  }
+  
+  .contact__button:hover {
+    background-color: #3752d5;
+  }
 }
 @media screen and (min-width: 768px) {
   body {
