--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -482,6 +482,7 @@ img {
     padding-top: 2rem;
   }
  /* === CONTACT SECTION STYLING === */
+/* === CONTACT SECTION STYLING === */
 .contact__container {
   display: flex;
   justify-content: center;
